mycc.output
   0  $accept : prog $end

   1  prog : Mprog exts

   2  Mprog :

   3  else_stmt : ELSE stmt

   4  exts : exts func
   5       | exts decl
   6       |

   7  func : MAIN '(' ')' Mmain block
   8       | ftype Margs args ')' block

   9  Mmain :

  10  Margs :

  11  block : '{' decls stmts '}'

  12  decls : decls decl
  13        |

  14  decl : list ';'

  15  type : VOID
  16       | INT
  17       | FLOAT

  18  args : args ',' type ID
  19       | type ID

  20  list : list ',' ID
  21       | type ID

  22  stmts : stmts stmt
  23        |

  24  stmt : ';'
  25       | expr ';'
  26       | IF '(' expr M ')' stmt N L else_stmt L
  27       | WHILE '(' L expr M ')' stmt N L
  28       | DO L stmt WHILE '(' expr M N L ')' ';'
  29       | FOR '(' expr O ';' L expr M N ';' L expr O N ')' L stmt
  30       | RETURN expr ';'
  31       | BREAK ';'
  32       | '{' stmts '}'
  33       | error ';'

  34  exprs : exprs ',' expr
  35        | expr

  36  expr : ID '=' expr
  37       | ID PA expr
  38       | ID NA expr
  39       | ID TA expr
  40       | ID DA expr
  41       | ID MA expr
  42       | ID AA expr
  43       | ID XA expr
  44       | ID OA expr
  45       | ID LA expr
  46       | ID RA expr
  47       | ID
  48       | expr OR expr
  49       | expr AN expr
  50       | expr '|' expr
  51       | expr '^' expr
  52       | expr '&' expr
  53       | expr EQ expr
  54       | expr NE expr
  55       | expr '<' expr
  56       | expr '>' expr
  57       | expr LE expr
  58       | expr GE expr
  59       | expr LS expr
  60       | expr RS expr
  61       | expr '+' expr
  62       | expr '-' expr
  63       | expr '*' expr
  64       | expr '/' expr
  65       | expr '%' expr
  66       | expr '%' expr
  67       | expr AN L expr
  68       | '!' expr
  69       | '~' expr
  70       | '+' expr
  71       | '-' expr
  72       | '(' expr ')'
  73       | '$' INT8
  74       | PP ID
  75       | NN ID
  76       | ID PP
  77       | ID NN
  78       | INT8
  79       | INT16
  80       | INT32
  81       | FLT
  82       | STR
  83       | ID '(' exprs ')'

  84  K :

  85  L :

  86  M :

  87  N :

  88  P :

  89  O :

  90  ftype : type ID '('

state 0
	$accept : . prog $end  (0)
	Mprog : .  (2)

	.  reduce 2

	prog  goto 1
	Mprog  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : Mprog . exts  (1)
	exts : .  (6)

	.  reduce 6

	exts  goto 3


state 3
	prog : Mprog exts .  (1)
	exts : exts . func  (4)
	exts : exts . decl  (5)

	FLOAT  shift 4
	INT  shift 5
	MAIN  shift 6
	VOID  shift 7
	$end  reduce 1

	type  goto 8
	list  goto 9
	ftype  goto 10
	func  goto 11
	decl  goto 12


state 4
	type : FLOAT .  (17)

	.  reduce 17


state 5
	type : INT .  (16)

	.  reduce 16


state 6
	func : MAIN . '(' ')' Mmain block  (7)

	'('  shift 13
	.  error


state 7
	type : VOID .  (15)

	.  reduce 15


state 8
	list : type . ID  (21)
	ftype : type . ID '('  (90)

	ID  shift 14
	.  error


state 9
	decl : list . ';'  (14)
	list : list . ',' ID  (20)

	';'  shift 15
	','  shift 16
	.  error


state 10
	func : ftype . Margs args ')' block  (8)
	Margs : .  (10)

	.  reduce 10

	Margs  goto 17


state 11
	exts : exts func .  (4)

	.  reduce 4


state 12
	exts : exts decl .  (5)

	.  reduce 5


state 13
	func : MAIN '(' . ')' Mmain block  (7)

	')'  shift 18
	.  error


state 14
	list : type ID .  (21)
	ftype : type ID . '('  (90)

	'('  shift 19
	';'  reduce 21
	','  reduce 21


state 15
	decl : list ';' .  (14)

	.  reduce 14


state 16
	list : list ',' . ID  (20)

	ID  shift 20
	.  error


state 17
	func : ftype Margs . args ')' block  (8)

	FLOAT  shift 4
	INT  shift 5
	VOID  shift 7
	.  error

	type  goto 21
	args  goto 22


state 18
	func : MAIN '(' ')' . Mmain block  (7)
	Mmain : .  (9)

	.  reduce 9

	Mmain  goto 23


state 19
	ftype : type ID '(' .  (90)

	.  reduce 90


state 20
	list : list ',' ID .  (20)

	.  reduce 20


state 21
	args : type . ID  (19)

	ID  shift 24
	.  error


state 22
	func : ftype Margs args . ')' block  (8)
	args : args . ',' type ID  (18)

	')'  shift 25
	','  shift 26
	.  error


state 23
	func : MAIN '(' ')' Mmain . block  (7)

	'{'  shift 27
	.  error

	block  goto 28


state 24
	args : type ID .  (19)

	.  reduce 19


state 25
	func : ftype Margs args ')' . block  (8)

	'{'  shift 27
	.  error

	block  goto 29


state 26
	args : args ',' . type ID  (18)

	FLOAT  shift 4
	INT  shift 5
	VOID  shift 7
	.  error

	type  goto 30


state 27
	block : '{' . decls stmts '}'  (11)
	decls : .  (13)

	.  reduce 13

	decls  goto 31


state 28
	func : MAIN '(' ')' Mmain block .  (7)

	.  reduce 7


state 29
	func : ftype Margs args ')' block .  (8)

	.  reduce 8


state 30
	args : args ',' type . ID  (18)

	ID  shift 32
	.  error


state 31
	block : '{' decls . stmts '}'  (11)
	decls : decls . decl  (12)
	stmts : .  (23)

	FLOAT  shift 4
	INT  shift 5
	VOID  shift 7
	error  reduce 23
	ID  reduce 23
	INT8  reduce 23
	INT16  reduce 23
	INT32  reduce 23
	FLT  reduce 23
	STR  reduce 23
	DO  reduce 23
	FOR  reduce 23
	IF  reduce 23
	RETURN  reduce 23
	WHILE  reduce 23
	BREAK  reduce 23
	'+'  reduce 23
	'-'  reduce 23
	'!'  reduce 23
	'~'  reduce 23
	PP  reduce 23
	NN  reduce 23
	'('  reduce 23
	'{'  reduce 23
	'}'  reduce 23
	';'  reduce 23
	'$'  reduce 23

	type  goto 33
	list  goto 9
	decl  goto 34
	stmts  goto 35


state 32
	args : args ',' type ID .  (18)

	.  reduce 18


state 33
	list : type . ID  (21)

	ID  shift 36
	.  error


state 34
	decls : decls decl .  (12)

	.  reduce 12


state 35
	block : '{' decls stmts . '}'  (11)
	stmts : stmts . stmt  (22)

	error  shift 37
	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	DO  shift 44
	FOR  shift 45
	IF  shift 46
	RETURN  shift 47
	WHILE  shift 48
	BREAK  shift 49
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'{'  shift 57
	'}'  shift 58
	';'  shift 59
	'$'  shift 60
	.  error

	expr  goto 61
	stmt  goto 62


state 36
	list : type ID .  (21)

	.  reduce 21


state 37
	stmt : error . ';'  (33)

	';'  shift 63
	.  error


state 38
	expr : ID . '=' expr  (36)
	expr : ID . PA expr  (37)
	expr : ID . NA expr  (38)
	expr : ID . TA expr  (39)
	expr : ID . DA expr  (40)
	expr : ID . MA expr  (41)
	expr : ID . AA expr  (42)
	expr : ID . XA expr  (43)
	expr : ID . OA expr  (44)
	expr : ID . LA expr  (45)
	expr : ID . RA expr  (46)
	expr : ID .  (47)
	expr : ID . PP  (76)
	expr : ID . NN  (77)
	expr : ID . '(' exprs ')'  (83)

	'='  shift 64
	PA  shift 65
	NA  shift 66
	TA  shift 67
	DA  shift 68
	MA  shift 69
	AA  shift 70
	XA  shift 71
	OA  shift 72
	LA  shift 73
	RA  shift 74
	PP  shift 75
	NN  shift 76
	'('  shift 77
	OR  reduce 47
	AN  reduce 47
	'|'  reduce 47
	'^'  reduce 47
	'&'  reduce 47
	EQ  reduce 47
	NE  reduce 47
	LE  reduce 47
	'<'  reduce 47
	GE  reduce 47
	'>'  reduce 47
	LS  reduce 47
	RS  reduce 47
	'+'  reduce 47
	'-'  reduce 47
	'*'  reduce 47
	'/'  reduce 47
	'%'  reduce 47
	')'  reduce 47
	';'  reduce 47
	','  reduce 47


state 39
	expr : INT8 .  (78)

	.  reduce 78


state 40
	expr : INT16 .  (79)

	.  reduce 79


state 41
	expr : INT32 .  (80)

	.  reduce 80


state 42
	expr : FLT .  (81)

	.  reduce 81


state 43
	expr : STR .  (82)

	.  reduce 82


state 44
	stmt : DO . L stmt WHILE '(' expr M N L ')' ';'  (28)
	L : .  (85)

	.  reduce 85

	L  goto 78


state 45
	stmt : FOR . '(' expr O ';' L expr M N ';' L expr O N ')' L stmt  (29)

	'('  shift 79
	.  error


state 46
	stmt : IF . '(' expr M ')' stmt N L else_stmt L  (26)

	'('  shift 80
	.  error


state 47
	stmt : RETURN . expr ';'  (30)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 81


state 48
	stmt : WHILE . '(' L expr M ')' stmt N L  (27)

	'('  shift 82
	.  error


state 49
	stmt : BREAK . ';'  (31)

	';'  shift 83
	.  error


state 50
	expr : '+' . expr  (70)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 84


state 51
	expr : '-' . expr  (71)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 85


state 52
	expr : '!' . expr  (68)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 86


state 53
	expr : '~' . expr  (69)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 87


state 54
	expr : PP . ID  (74)

	ID  shift 88
	.  error


state 55
	expr : NN . ID  (75)

	ID  shift 89
	.  error


state 56
	expr : '(' . expr ')'  (72)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 90


state 57
	stmt : '{' . stmts '}'  (32)
	stmts : .  (23)

	.  reduce 23

	stmts  goto 91


state 58
	block : '{' decls stmts '}' .  (11)

	.  reduce 11


state 59
	stmt : ';' .  (24)

	.  reduce 24


state 60
	expr : '$' . INT8  (73)

	INT8  shift 92
	.  error


state 61
	stmt : expr . ';'  (25)
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)

	OR  shift 93
	AN  shift 94
	'|'  shift 95
	'^'  shift 96
	'&'  shift 97
	EQ  shift 98
	NE  shift 99
	LE  shift 100
	'<'  shift 101
	GE  shift 102
	'>'  shift 103
	LS  shift 104
	RS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	';'  shift 111
	.  error


state 62
	stmts : stmts stmt .  (22)

	.  reduce 22


state 63
	stmt : error ';' .  (33)

	.  reduce 33


state 64
	expr : ID '=' . expr  (36)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 112


state 65
	expr : ID PA . expr  (37)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 113


state 66
	expr : ID NA . expr  (38)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 114


state 67
	expr : ID TA . expr  (39)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 115


state 68
	expr : ID DA . expr  (40)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 116


state 69
	expr : ID MA . expr  (41)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 117


state 70
	expr : ID AA . expr  (42)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 118


state 71
	expr : ID XA . expr  (43)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 119


state 72
	expr : ID OA . expr  (44)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 120


state 73
	expr : ID LA . expr  (45)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 121


state 74
	expr : ID RA . expr  (46)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 122


state 75
	expr : ID PP .  (76)

	.  reduce 76


state 76
	expr : ID NN .  (77)

	.  reduce 77


state 77
	expr : ID '(' . exprs ')'  (83)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 123
	exprs  goto 124


state 78
	stmt : DO L . stmt WHILE '(' expr M N L ')' ';'  (28)

	error  shift 37
	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	DO  shift 44
	FOR  shift 45
	IF  shift 46
	RETURN  shift 47
	WHILE  shift 48
	BREAK  shift 49
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'{'  shift 57
	';'  shift 59
	'$'  shift 60
	.  error

	expr  goto 61
	stmt  goto 125


state 79
	stmt : FOR '(' . expr O ';' L expr M N ';' L expr O N ')' L stmt  (29)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 126


state 80
	stmt : IF '(' . expr M ')' stmt N L else_stmt L  (26)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 127


state 81
	stmt : RETURN expr . ';'  (30)
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)

	OR  shift 93
	AN  shift 94
	'|'  shift 95
	'^'  shift 96
	'&'  shift 97
	EQ  shift 98
	NE  shift 99
	LE  shift 100
	'<'  shift 101
	GE  shift 102
	'>'  shift 103
	LS  shift 104
	RS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	';'  shift 128
	.  error


state 82
	stmt : WHILE '(' . L expr M ')' stmt N L  (27)
	L : .  (85)

	.  reduce 85

	L  goto 129


state 83
	stmt : BREAK ';' .  (31)

	.  reduce 31


state 84
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)
	expr : '+' expr .  (70)

	.  reduce 70


state 85
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)
	expr : '-' expr .  (71)

	.  reduce 71


state 86
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)
	expr : '!' expr .  (68)

	.  reduce 68


state 87
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)
	expr : '~' expr .  (69)

	.  reduce 69


state 88
	expr : PP ID .  (74)

	.  reduce 74


state 89
	expr : NN ID .  (75)

	.  reduce 75


state 90
	expr : expr . OR expr  (48)
	expr : expr . AN expr  (49)
	expr : expr . '|' expr  (50)
	expr : expr . '^' expr  (51)
	expr : expr . '&' expr  (52)
	expr : expr . EQ expr  (53)
	expr : expr . NE expr  (54)
	expr : expr . '<' expr  (55)
	expr : expr . '>' expr  (56)
	expr : expr . LE expr  (57)
	expr : expr . GE expr  (58)
	expr : expr . LS expr  (59)
	expr : expr . RS expr  (60)
	expr : expr . '+' expr  (61)
	expr : expr . '-' expr  (62)
	expr : expr . '*' expr  (63)
	expr : expr . '/' expr  (64)
	expr : expr . '%' expr  (65)
	expr : expr . '%' expr  (66)
	expr : expr . AN L expr  (67)
	expr : '(' expr . ')'  (72)

	OR  shift 93
	AN  shift 94
	'|'  shift 95
	'^'  shift 96
	'&'  shift 97
	EQ  shift 98
	NE  shift 99
	LE  shift 100
	'<'  shift 101
	GE  shift 102
	'>'  shift 103
	LS  shift 104
	RS  shift 105
	'+'  shift 106
	'-'  shift 107
	'*'  shift 108
	'/'  shift 109
	'%'  shift 110
	')'  shift 130
	.  error


state 91
	stmts : stmts . stmt  (22)
	stmt : '{' stmts . '}'  (32)

	error  shift 37
	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	DO  shift 44
	FOR  shift 45
	IF  shift 46
	RETURN  shift 47
	WHILE  shift 48
	BREAK  shift 49
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'{'  shift 57
	'}'  shift 131
	';'  shift 59
	'$'  shift 60
	.  error

	expr  goto 61
	stmt  goto 62


state 92
	expr : '$' INT8 .  (73)

	.  reduce 73


state 93
	expr : expr OR . expr  (48)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 132


94: shift/reduce conflict (shift 38, reduce 85) on ID
94: shift/reduce conflict (shift 39, reduce 85) on INT8
94: shift/reduce conflict (shift 40, reduce 85) on INT16
94: shift/reduce conflict (shift 41, reduce 85) on INT32
94: shift/reduce conflict (shift 42, reduce 85) on FLT
94: shift/reduce conflict (shift 43, reduce 85) on STR
94: shift/reduce conflict (shift 50, reduce 85) on '+'
94: shift/reduce conflict (shift 51, reduce 85) on '-'
94: shift/reduce conflict (shift 52, reduce 85) on '!'
94: shift/reduce conflict (shift 53, reduce 85) on '~'
94: shift/reduce conflict (shift 54, reduce 85) on PP
94: shift/reduce conflict (shift 55, reduce 85) on NN
94: shift/reduce conflict (shift 56, reduce 85) on '('
94: shift/reduce conflict (shift 60, reduce 85) on '$'
state 94
	expr : expr AN . expr  (49)
	expr : expr AN . L expr  (67)
	L : .  (85)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60

	L  goto 133
	expr  goto 134


state 95
	expr : expr '|' . expr  (50)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 135


state 96
	expr : expr '^' . expr  (51)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 136


state 97
	expr : expr '&' . expr  (52)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 137


state 98
	expr : expr EQ . expr  (53)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 138


state 99
	expr : expr NE . expr  (54)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 139


state 100
	expr : expr LE . expr  (57)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 140


state 101
	expr : expr '<' . expr  (55)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 141


state 102
	expr : expr GE . expr  (58)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 142


state 103
	expr : expr '>' . expr  (56)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 143


state 104
	expr : expr LS . expr  (59)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 144


state 105
	expr : expr RS . expr  (60)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error

	expr  goto 145


state 106
	expr : expr '+' . expr  (61)

	ID  shift 38
	INT8  shift 39
	INT16  shift 40
	INT32  shift 41
	FLT  shift 42
	STR  shift 43
	'+'  shift 50
	'-'  shift 51
	'!'  shift 52
	'~'  shift 53
	PP  shift 54
	NN  shift 55
	'('  shift 56
	'$'  shift 60
	.  error
